// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrivateLink view when the page has loaded successfully should display the page title 1`] = `<h1 class="oc-invisible-sr">Resolving private link</h1>`;

exports[`PrivateLink view when the view has finished loading and there was no error should not display the loading text and the error message 1`] = `
<div class="oc-login oc-height-viewport" style="background-image: url(assets/loginBackground.jpg);">
  <h1 class="oc-invisible-sr">Resolving private link</h1>
  <div class="oc-login-card oc-position-center"><img src="assets/logo.svg" alt="" aria-hidden="true" class="oc-login-logo">
    <!---->
    <!---->
  </div>
</div>
`;

exports[`PrivateLink view when the view is still loading should display the loading text with the spinner 1`] = `
<div class="oc-login-card-body">
  <h2 class="oc-login-card-title">
    <translate-stub tag="span">Resolving private link…</translate-stub>
  </h2>
  <oc-spinner-stub arialabel="" size="medium" aria-hidden="true"></oc-spinner-stub>
</div>
`;

exports[`PrivateLink view when there was an error should display the error message 1`] = `
<div class="oc-login-card-body">
  <h2 class="oc-login-card-title">
    <translate-stub tag="span">An error occurred while resolving the private link</translate-stub>
  </h2> <span>Error: some error</span>
</div>
`;
